JDK17: nanoh5it test working